# mlx-rs

./: .gitignore  .gitmodules  BENCHMARK.md  CODE_REVIEW.md  Cargo.toml  README.md  justfile
crates/mlxr/: Cargo.toml  README.md
crates/mlxr-codegen/: Cargo.toml
crates/mlxr-codegen/src/: derive_buildable.rs  derive_builder.rs  generate_builder.rs  generate_macro.rs  lib.rs
crates/mlxr-convert/: Cargo.toml
crates/mlxr-convert/src/: lib.rs  plan.rs  quantize.rs  qwen3_5.rs  runner.rs  shards.rs
crates/mlxr-lm/: Cargo.toml  README.md  build.rs
crates/mlxr-lm/benches/: incremental_decode.rs  lm_decode.rs
crates/mlxr-lm/src/: activations.rs  config.rs  error.rs  family.rs  language_model.rs  lib.rs  lm_input.rs  loader.rs  model_context.rs  prelude.rs  quantization.rs  sampler.rs  user_input.rs
crates/mlxr-lm/src/attention/: kernel_source.rs  mod.rs  params.rs  tests.rs
crates/mlxr-lm/src/cache/: delegate.rs  full_attn.rs  fused_quantized_sdpa.rs  io.rs  kernels.rs  kvcache.rs  mod.rs  options.rs  quantized_kvcache.rs  rotating_kvcache.rs  rotation.rs  trait_def.rs
crates/mlxr-lm/src/gemma4/: mod.rs
crates/mlxr-lm/src/gemma4/text/: adapter.rs  config.rs  loader.rs  mod.rs  rope.rs  text.rs  weights.rs
crates/mlxr-lm/src/nn/: attention_input.rs  mod.rs  model_input.rs  swiglu_mlp.rs  switch.rs
crates/mlxr-lm/src/qwen3_5/: mod.rs
crates/mlxr-lm/src/qwen3_5/image/: adapter.rs  mod.rs  multimodal.rs  processor.rs  vision.rs  weights.rs
crates/mlxr-lm/src/qwen3_5/text/: adapter_dense.rs  adapter_moe.rs  cache.rs  config.rs  gated_delta.rs  gated_delta_block.rs  layer.rs  mod.rs  moe.rs  rope.rs  sampling.rs  text.rs  weights.rs
crates/mlxr-lm/src/utils/: mod.rs  rope.rs
crates/mlxr-lm/tests/: cache_basics.rs  gemma4_e2b_parity.rs  qwen3_6_27b_parity.rs  qwen3_6_35b_a3b_parity.rs  userinput_text_only.rs  userinput_vlm.rs
crates/mlxr-lm/tests/fixtures/qwen3_5/: first_logits_hello.npz  generate.py  post_layer_0_hello.npz  vision_features_test.npz
crates/mlxr-macros/: Cargo.toml
crates/mlxr-macros/src/: lib.rs  module_parameters.rs  quantizable.rs  util.rs
crates/mlxr-tests/: Cargo.toml
crates/mlxr-tests/tests/: common.rs  test_compile_with_state.rs  test_exported_macros.rs  test_internal_macros.rs  test_module.rs  test_optimizers.rs  test_quantizable.rs
crates/mlxr/benches/: compile_overhead.rs
crates/mlxr/examples/: linear_regression.rs  tutorial.rs
crates/mlxr/src/: device.rs  dtype.rs  error.rs  fast.rs  lib.rs  linalg.rs  losses.rs  memory.rs  quantization.rs  random.rs  stream.rs
crates/mlxr/src/array/: element.rs  mod.rs  operators.rs
crates/mlxr/src/fft/: fftn.rs  mod.rs  rfftn.rs  shift.rs
crates/mlxr/src/layers/: activation.rs  container.rs  convolution.rs  convolution_transpose.rs  dropout.rs  embedding.rs  linear.rs  normalization.rs  pooling.rs  positional_encoding.rs  quantized.rs  recurrent.rs  transformer.rs  upsample.rs  value_and_grad.rs
crates/mlxr/src/macros/: array.rs  internal.rs  mod.rs
crates/mlxr/src/module/: mod.rs  module.rs
crates/mlxr/src/ops/: arithmetic.rs  conversion.rs  convolution.rs  cumulative.rs  factory.rs  io.rs  logical.rs  other.rs  quantization.rs  reduction.rs  shapes.rs  sort.rs
crates/mlxr/src/ops/indexing/: index_impl.rs  indexmut_impl.rs  (+1 more)
crates/mlxr/src/optimizers/: adadelta.rs  adafactor.rs  adagrad.rs  adam.rs  adamax.rs  adamw.rs  lion.rs  rmsprop.rs  sgd.rs
crates/mlxr/src/transforms/: grad.rs  keyed_value_and_grad.rs  mod.rs  value_and_grad.rs
crates/mlxr/src/utils/: guard.rs  io.rs  mod.rs
crates/mlxr/tests/: test_compile_with_state.rs  test_disable_compile.rs  test_exported_macros.rs  test_generate_macro.rs  test_module_parameters.rs  test_optimizers.rs
examples/chandra/: Cargo.toml  README.md
examples/chandra/src/: main.rs  server.rs
examples/chat/: Cargo.toml
examples/chat/src/: lib.rs  markdown_stream.rs  think_stream.rs  user_input.rs
examples/lm/: Cargo.toml  README.md
examples/lm/scripts/: baseline_bench.sh  cap_sweep.sh
examples/lm/src/: main.rs
mlx-lm/: Cargo.toml  README.md  build.rs
mlx-lm-convert/: Cargo.toml
mlx-lm-convert/src/: lib.rs  plan.rs  quantize.rs  qwen3_5.rs  runner.rs  shards.rs
mlx-lm-utils/: Cargo.toml
mlx-lm-utils/src/: tokenizer.rs
mlx-lm/benches/: README.md  incremental_decode.rs  lm_decode.rs
mlx-lm/data/turboquant_codebooks/: codebook_d128_b1.json  codebook_d128_b2.json  codebook_d128_b3.json  codebook_d128_b4.json  codebook_d64_b1.json  codebook_d64_b2.json  codebook_d64_b3.json  codebook_d64_b4.json
mlx-lm/src/: activations.rs  cache.rs  chat_template.rs  error.rs  language_model.rs  lib.rs  lm_input.rs  loader.rs  model_context.rs  prelude.rs  quantization.rs  sampler.rs  user_input.rs
mlx-lm/src/adapters/: gemma4.rs  llama.rs  mod.rs  qwen3.rs  qwen3_5.rs  qwen3_5_moe.rs  qwen3_5_vlm.rs
mlx-lm/src/cache/: fused_quantized_sdpa.rs  io.rs  kernels.rs  kvcache.rs  mod.rs  quantized_kvcache.rs  rotating_kvcache.rs  rotation.rs  trait_def.rs
mlx-lm/src/cache/turboquant/: cache.rs  codebook.rs  mod.rs  packing.rs  quantizer.rs  rotation.rs  searchsorted_kernel.rs  tq_score_kernel.rs
mlx-lm/src/fused_kernels/: gather_qmm_combine.rs  mod.rs
mlx-lm/src/models/: llama.rs  mod.rs  qwen3.rs  qwen3_5_moe.rs
mlx-lm/src/models/gemma4/: config.rs  generation.rs  loader.rs  mod.rs  rope.rs  switch_layers.rs  text.rs  weights.rs
mlx-lm/src/models/qwen3_5/: cache.rs  config.rs  gated_delta.rs  gated_delta_block.rs  generation.rs  image_processor.rs  layer.rs  mod.rs  multimodal.rs  rope.rs  text.rs  vision.rs  weights.rs
mlx-lm/src/nn/: attention_input.rs  mod.rs  model_input.rs  swiglu_mlp.rs  switch.rs
mlx-lm/src/steel_attention/: kernel_source.rs  mod.rs  params.rs  tests.rs
mlx-lm/src/utils/: mod.rs  rope.rs
mlx-lm/tests/: gemma4_e2b_parity.rs  quantized_kv_parity.rs  qwen3_5_parity.rs  qwen3_6_27b_parity.rs  qwen3_6_35b_a3b_parity.rs  turboquant_parity.rs  userinput_text_only.rs  userinput_vlm.rs
mlx-lm/tests/fixtures/qwen3_5/: embeddings_hello.npz  gdn_l0_post_conv_hello.npz  greedy_hello_64.json
(+122 files in other folders)
