[workspace.package]
# All but mlx-sys should follow the same version. mlx-sys should follow
# the version of mlx-c.
version = "0.27.0"
edition = "2021"
authors = [
  "Luke Jones <luke@ljones.dev>",
  "Minghua Wu <michael.wu1107@gmail.com>",
  "David Chavez <david@dcvz.io>",
]

repository = "https://github.com/flukejones/mlx-rs"
keywords = ["mlx", "deep-learning", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"
rust-version = "1.95.0"

[workspace]
members = [
  "mlx-macros",
  "mlx-sys",
  "mlx-rs",
  "mlx-internal-macros",
  "mlx-lm",
  "mlx-lm-convert",
  "mlx-lm-utils",
  "mlx-tests",
  "xtask",
  "examples/lm",
  "examples/mnist",
]

resolver = "2"

# Bench binaries default to `release` with debuginfo stripped — leaves
# Instruments / samply / xctrace showing raw addresses instead of
# Rust fn names. Keep release optimisation, add line-table-only debug
# info so symbolication works without bloating the binary much.
[profile.bench]
debug = "line-tables-only"
strip = "none"

# Same shape as bench, applied to regular bins. `cargo build --profile profiling`
# yields optimised binaries with line-table debug info for xctrace /
# Instruments / samply symbolication.
[profile.profiling]
inherits = "release"
debug = "line-tables-only"
strip = "none"

# Single source of truth for the upstream mlx version that mlx-sys
# (cmake FetchContent) and mlx-lm (steel-attention preamble generator)
# both consume.
[workspace.metadata.mlx]
version = "v0.31.2"                              # last bumped 2026-05-16
sha = "68cf2fddd8de5edd8ab3d926391772b2e2cedad8" # mlx-c #114

[workspace.dependencies]
# workspace local dependencies
mlx-sys = { version = "=0.2.0", path = "mlx-sys" }
mlx-macros = { version = "0.27", path = "mlx-macros" }
mlx-internal-macros = { version = "0.27", path = "mlx-internal-macros" }
mlx-rs = { version = "0.27", path = "mlx-rs" }
mlx-lm = { version = "0.0.1", path = "mlx-lm" }
mlx-lm-utils = { version = "0.0.1", path = "mlx-lm-utils" }

# external dependencies
thiserror = "2"
float_eq = "1"
pretty_assertions = "1.4.0"
dyn-clone = "1"
half = "2"
mach-sys = "0.5"
num-complex = "0.4"
num_enum = "0.7"
num-traits = "0.2"
paste = "1"
smallvec = "1"
strum = { version = "0.27", features = ["derive"] }
libc = "0.2"
parking_lot = "0.12"
tempfile = "3"
itertools = "0.14"
syn = { version = "2", features = ["full"] }
quote = "1"
darling = "0.21"
proc-macro2 = "1"
bindgen = "0.72.1"
cmake = "0.1"
cc = "1"
safetensors = "0.6"
bytemuck = "1"
memmap2 = "0.9"
tokenizers = "0.22"
minijinja = { version = "2", features = ["loader", "loop_controls"] }
minijinja-contrib = { version = "2", features = ["pycompat"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argh = "0.1"
env_logger = "0.11"
log = "0.4"

# ---------------------------------------------------------------------------
# Workspace lints. Member crates opt in with `[lints] workspace = true`.
# Pedantic baseline tuned for ML / numerical / FFI code — float casts and
# numeric casts are deliberately allowed because dtype conversions
# (f16/bf16/f32) and Metal-buffer offsets are intrinsic to the work.
# ---------------------------------------------------------------------------

[workspace.lints.rust]
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_prelude_collisions = "deny"
semicolon_in_expressions_from_macros = "deny"
trivial_casts = "warn"
unexpected_cfgs = "deny"
unused_extern_crates = "deny"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

allow_attributes_without_reason = "deny"
await_holding_lock = "deny"
bool_to_int_with_if = "warn"
branches_sharing_code = "warn"
char_lit_as_u8 = "warn"
checked_conversions = "warn"
cloned_instead_of_copied = "warn"
dbg_macro = "deny"
debug_assert_with_mut_call = "warn"
derive_partial_eq_without_eq = "warn"
empty_enums = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
exit = "deny"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "deny"
fn_params_excessive_bools = "warn"
from_iter_instead_of_collect = "warn"
get_unwrap = "warn"
if_let_mutex = "deny"
ignored_unit_patterns = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
iter_not_returning_iterator = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
large_digit_groups = "warn"
large_futures = "deny"
large_include_file = "warn"
large_types_passed_by_value = "warn"
let_unit_value = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
manual_string_new = "warn"
match_same_arms = "warn"
match_wild_err_arm = "deny"
match_wildcard_for_single_variants = "warn"
mem_forget = "deny"
mismatching_type_param_order = "warn"
missing_assert_message = "allow"            # excessive warnings
missing_safety_doc = "warn"
mixed_attributes_style = "warn"
mut_mut = "warn"
mutex_integer = "deny"
needless_borrow = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
negative_feature_names = "warn"
non_std_lazy_statics = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
option_option = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
print_stderr = "warn"
print_stdout = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
rc_mutex = "deny"
readonly_write_lock = "deny"
redundant_type_annotations = "warn"
ref_option = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
same_functions_in_if_condition = "warn"
self_only_used_in_recursion = "warn"
semicolon_if_nothing_returned = "warn"
single_char_pattern = "warn"
single_match_else = "warn"
str_to_string = "warn"
string_add = "deny"
string_add_assign = "deny"
string_lit_as_bytes = "warn"
suspicious_command_arg_space = "warn"
todo = "warn"
# Cosmetic only — generated docs render correctly regardless.
too_long_first_doc_paragraph = "allow"
trait_duplication_in_bounds = "warn"
transmute_ptr_to_ptr = "deny"
unchecked_time_subtraction = "warn"
undocumented_unsafe_blocks = "allow"       # excessive warnings
unimplemented = "warn"
uninhabited_references = "warn"
uninlined_format_args = "warn"
unnecessary_box_returns = "warn"
unnecessary_literal_bound = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unnecessary_struct_initialization = "warn"
unnecessary_wraps = "warn"
unnested_or_patterns = "warn"
unused_async = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
unused_self = "warn"
unwrap_used = "deny"
use_self = "warn"
useless_let_if_seq = "warn"
useless_transmute = "warn"
verbose_file_reads = "warn"
wildcard_dependencies = "warn"
zero_sized_map_values = "warn"

# Explicitly allowed for ML / numerical / FFI:
#   - cast_*: dtype conversions (f16/bf16/f32/i32) and Metal buffer offsets
#     are core to this codebase; flagging each one is noise.
#   - module_name_repetitions: typed entities deliberately keep the module
#     prefix at call sites (kv_cache::KvCache, attention::AttentionMask).
#   - missing_errors_doc: `Result<T, Error>` returns are pervasive and the
#     error type is the documentation.
#   - doc_markdown: too many false positives on math/ident-shaped prose.
#   - needless_pass_by_value: closure-capture patterns (Arc/Sender moved
#     into callbacks) trigger spurious refs-instead suggestions.
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
