[package]
name = "mlx-lm"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
documentation.workspace = true
description = "Rust implementation of mlx-lm"

[dependencies]
# Local dependencies
mlx-rs.workspace = true
mlx-macros.workspace = true
mlx-lm-utils.workspace = true

# External dependencies
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokenizers.workspace = true
minijinja.workspace = true
minijinja-contrib.workspace = true
anyhow = "1"

[dev-dependencies]
lazy_static = "1"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "lm_decode"
harness = false
