[package]
name = "mlxr-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

description = "Consumer-facing derive macros (ModuleParameters, Quantizable) for mlxr"

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
darling.workspace = true
proc-macro2.workspace = true


[lints]
workspace = true
