[package]
name = "mlxr-tests"
edition = "2021"
version.workspace = true
authors.workspace = true
publish = false

[dependencies]

[dev-dependencies]
mlxr-codegen.workspace = true
# Integration tests exercise every public mlxr surface.
mlxr = { workspace = true, features = ["metal", "layers", "fft", "linalg", "fast", "losses", "optimizers"] }
tempfile.workspace = true

[lints]
workspace = true
