[package]
name = "mlxr"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
description = "Rust port of MLX's high-level API: tensors, layers, transforms, FFT, linalg, fast kernels."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["aarch64-apple-darwin", "aarch64-apple-ios", "aarch64-apple-ios-sim"]

[dependencies]
mlxr-sys.workspace = true
mlxr-codegen.workspace = true
mlxr-macros.workspace = true
dyn-clone.workspace = true
half.workspace = true
mach-sys.workspace = true
num-complex.workspace = true
num_enum.workspace = true
num-traits.workspace = true
paste.workspace = true
smallvec.workspace = true
strum.workspace = true
thiserror.workspace = true
libc.workspace = true
parking_lot.workspace = true
itertools.workspace = true

# optional dependencies
safetensors = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true, features = [
  "extern_crate_std",
] }

[dev-dependencies]
pretty_assertions.workspace = true
float_eq.workspace = true
tempfile.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "compile_overhead"
harness = false

# mlxr is inference-oriented by default: only the surfaces `mlxr-lm`
# consumes are on. Training-only features (`losses`, `optimizers`) and
# signal-processing (`fft`) opt-in explicitly — `examples/mnist`
# enables them at the consumer.
[features]
default = [
    "accelerate",
    "metal",
    "layers",
    "linalg",
    "fast",
]

# Backend toggles forwarded to mlxr-sys.
accelerate = ["mlxr-sys/accelerate"]
metal = ["mlxr-sys/metal"]

# Higher-level libraries built on top of the always-compiled tensor
# + module core. Each is independent; opt out at the consumer to skip
# the corresponding `mlxr::*` module entirely.
layers = ["fast"]
fft = []
linalg = []
fast = []
losses = []
optimizers = []

# Enables conversion between `Array` and `safetensors::TensorView`
safetensors = ["dep:safetensors", "dep:bytemuck"]

[lints]
workspace = true
