[package]
name = "chandra"
edition = "2021"
version = "0.0.1"

[workspace]

[[bin]]
name = "chandra"
path = "src/main.rs"

[dependencies]
# Local dependencies
mlx-rs = { path = "../../mlx-rs" }
mlx-lm = { path = "../../mlx-lm" }

# External dependencies
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = "0.22.0"
minijinja = { version = "2", features = ["loop_controls"] }
minijinja-contrib = { version = "2", features = ["pycompat"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
axum = { version = "0.8", features = ["json", "tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "tiff", "webp", "gif"] }
ureq = { version = "2", default-features = false, features = ["tls"] }
