[package]
name = "chandra"
edition = "2021"
version = "0.0.1"

[[bin]]
name = "chandra"
path = "src/main.rs"

[dependencies]
mlx-rs.workspace = true
mlx-lm.workspace = true

argh = "0.1"
serde = { version = "1", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
tokenizers = { version = "0.22.0", default-features = false, features = ["onig"] }
tokio = { version = "1", default-features = false, features = ["rt", "macros", "net", "signal", "sync"] }
tokio-stream = { version = "0.1", default-features = false, features = ["sync"] }
axum = { version = "0.8", default-features = false, features = ["json", "http1", "tokio"] }
base64 = { version = "0.22", default-features = false, features = ["std"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "tiff", "webp", "gif"] }
