[package]
name = "lm"
edition = "2021"
version = "0.0.1"

[dependencies]
mlx-rs.workspace = true
mlx-lm.workspace = true
mlx-lm-utils.workspace = true

anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "line_series", "ttf"] }
serde = { version = "1", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
